[package]
name = "axonai"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
env = "1.0.1"
scraper = "0.24.0"
uuid = { version = "1.18.1", features = ["v4"] }


[dev-dependencies]
tokio-test = "0.4"
