[package]
name = "axonerai"
version = "0.1.0"
edition = "2024"
authors = ["Manoj <mnjkshrm@gmail.com>"]
description = "A type-safe, blazing fast agentic AI framework in Rust"
license = "MIT"
repository = "https://github.com/Manojython/axonerai"
readme = "README.md"
keywords = ["ai", "agents", "llm", "rust", "framework"]
categories = ["development-tools", "api-bindings"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
env = "1.0.1"
scraper = "0.24.0"
uuid = { version = "1.18.1", features = ["v4"] }


[dev-dependencies]
tokio-test = "0.4"
